# knowledge-lake-api

./: .dockerignore  .gitignore  .mcp.json  .railwayignore  AAE_COUNCIL_UPDATE_2024-12-04.md  AAE_COUNCIL_UPDATE_2025-12-05.md  BRIEF_FOR_CODEX_GEMINI.md  CLAUDE.md  CODEX_QUICK_START.md  DATABASE_SETUP.md  DAY3-4_SPRINT_COMPLETE.md  DEPLOYMENT_INVENTORY.md  DEPLOY_PERFORMANCE_OPTIMIZATIONS.md  DEPLOY_TODAY.md  DIAGNOSTIC_COMMANDS_FOR_GEMINI.md  Dockerfile  FILE_MANIFEST.md  FILE_MANIFEST_2025-11-08.md  INVENTORY_ENFORCEMENT.md  NEXT_STEPS_2025-11-08.md  Procfile  RAILWAY_DEBUG.md  RAILWAY_DEPLOYMENT.md  README.md  VIBESDK_AAE_DEPLOYMENT_FIX.md  VIBESDK_DEPLOYMENT_COMPLETE_2025-11-09.md  WAKE_UP_SUMMARY_2025-11-09.md  add_agent_prompts_to_knowledge_lake.py  api_server.py  api_server_enhanced.py  audio_generator_agent.py  audio_workflow_test_data.json  australian_healthcare_tts_final.gs  carla-claude-conversations.txt  cc-context-sync.py  check_github_repo.py  corrected_audio_workflow_nodes.json  database.py  enhanced_knowledge_lake_api.py  fix_anthropic_nodes.py  (+24 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
AAE-master/: README.md
CareTrack/: ARCHITECTURE_COMPARISON.md  CARETRACK_IMPLEMENTATION_PLAN.md  index.html  (+7 more)
manus-mcp/: DEPLOYMENT.md  INTEGRATION_GUIDE.md  KNOWLEDGE_LAKE_INTEGRATION.md  Manus MCP Server - Project Summary.md  QUICKSTART.md  README.md  gitignore  knowledge_lake_client.py  manus_server.py  mcp_research_notes.md  modelcontextprotocol.io_docs_develop_build-server.md  pyproject.toml  test_server.py
(+1129 files in other folders)
