[project]
name = "manus-mcp-server"
version = "1.0.0"
description = "MCP server providing task management tools for Manus integration with Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
manus-mcp-server = "manus_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
